# chess

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
Projekt/chess/: chess.sln
Projekt/chess/chess/: ChessPositions.txt  bishop.cpp  board.cpp  board.h  chess.vcxproj  chess.vcxproj.filters  chessDatabase.cpp  functions.h  king.cpp  knight.cpp  main.cpp  moveFromPlayer.cpp  moveFromPlayer.h  pawn.cpp  piece.cpp  piece.h  queen.cpp  rook.cpp  test.txt
chess/chess/: ChessPositions.txt  bishop.cpp  board.cpp  board.h  chess  chess.vcxproj  chess.vcxproj.filters  chessDatabase.cpp  chessDatabase.h  computer.cpp  gameMode.h  king.cpp  main.cpp  moveFromPlayer.cpp  moveFromPlayer.h  pawn.cpp  piece.cpp  piece.h  queen.cpp  twoHumans.cpp
lab1/Zad1/: Zad1.sln  Zad1.vcxproj  Zad1.vcxproj.filters  source.cpp
lab2/Lab 2/: Lab 2.sln
lab2/Lab 2/Lab 2/: Lab 2.vcxproj  Lab 2.vcxproj.filters  Source.cpp  zbiorosi.h
lab3/Lab3/: Lab3.sln
lab3/Lab3/Lab3/: Lab3.vcxproj  Lab3.vcxproj.filters  Source.cpp  wykres.h  zbiorosi.h
lab4/Lab4/: Lab4.sln  Lab4.vcxproj  Lab4.vcxproj.filters  Source.cpp  osliczbowa.cpp  osliczbowa.h  wykres.cpp  wykres.h  zbiorosi.h
lab5/Lab5/: Lab5.sln  Lab5.vcxproj  Lab5.vcxproj.filters  Source.cpp  name.cpp  name.h  series.cpp  series.h  wykres.cpp  wykres.h  zbiorosi.cpp
src/: Board.cpp  Board.hpp  ChessDatabase.cpp  ChessDatabase.hpp  computer.cpp  gameMode.hpp  main.cpp  moveFromPlayer.cpp  moveFromPlayer.hpp  twoHumans.cpp
src/common/: systemCls.hpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.hpp  Queen.cpp  Rook.cpp
(+2 files in other folders)
